<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!--  Direccion IP Broker   -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20sp"
                >
                <TextView
                    android:text="@string/incerta_la_direccion_ip_del_broker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15sp"
                android:gravity="center"
                android:layout_marginTop="30sp"
                >

                <EditText
                    android:id="@+id/edi_ip_broker"
                    android:hint="@string/ip_ejemplo"
                    android:textSize="15sp"
                    android:layout_width="200sp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:enabled="false"

                    />

                <Button
                    android:id="@+id/btn_guardar_ip"
                    android:text="@string/guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:visibility="gone"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="100sp"
                >
                <TextView
                    android:text="@string/para_cambiar_doble_click_y_192_168_0_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="20sp"
                    />
            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <!--  Led 1 pruebas   -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20sp"
                >
                <TextView
                    android:text="@string/prender_bombillo_manual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15sp"
                android:gravity="center"
                android:layout_marginTop="30sp"
                android:paddingBottom="20sp"
                >

                <Button
                    android:id="@+id/btn_activa_led_prueba"
                    android:text="ON / OFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <ImageView
                    android:id="@+id/led_1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_lightbulb_24"
                    android:layout_marginStart="30dp"
                    app:tint="@color/gray" />

                <TextView
                    android:id="@+id/numeroEstado"
                    android:text="@string/mensajeInicial"
                    android:layout_width="40sp"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <!--  Vista grafica distancia    -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:text="@string/estado_total_del_dispensador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                />

            <com.ekn.gruzer.gaugelibrary.HalfGauge
                android:id="@+id/halfGauge"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />

            <TextView
                android:id="@+id/porcentaje"
                android:textSize="20dp"
                android:text="@string/mensajeInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="200dp"
                />

            <TextView
                android:id="@+id/mensajeError"
                android:text="@string/mensajeInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="220dp"
                android:layout_marginBottom="20dp"
                />

        </androidx.cardview.widget.CardView>


        <!--  Activar Servo   -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                >
                <TextView
                    android:text="@string/servo_motor_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15sp"
                android:gravity="center"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                >

                <Button
                    android:id="@+id/btn_activar_servo_principal"
                    android:text="@string/activar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />



            </LinearLayout>



        </androidx.cardview.widget.CardView>



    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>



